syntax = "proto2";


package rpc;

message AdditionParam {
   oneof addition_oneof {
    int64  SParam     = 10;
	uint64 UParam  = 11;
	string StrParam   = 12;
    bytes  BParam   = 13;	
  }
}


message PBRpcRequestData{  
  optional uint64 Seq           = 1;
  optional string ServiceMethod = 2;
  optional bool NoReply         = 3;
  optional bytes   InParam      = 4;
  optional AdditionParam addtionParam = 5;
}

message PBRpcResponseData{
  optional uint64 Seq = 1;
  optional string Error = 2;
  optional bytes Reply = 3;
}

